Fix width of modal on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1254,10 +1254,6 @@ button.App-button {
 .Fee-update-modal-content .Exchange-swap-button-container {
   margin-top: 16px;
 }
-.FeeModal .Modal-content {
-  width: 100%;
-  max-width: 424px;
-}
 
 @media (max-width: 1380px) {
   .App-header-user-link.Trade-btn {
@@ -1403,7 +1399,7 @@ button.App-button {
   .App-header-menu-icon-block {
     margin-left: 16px;
   }
-  .FeeModal.Fee-update-modal .Modal-content {
+  .FeeModal .Modal-content {
     width: calc(100% - 32px);
     max-width: 600px;
   }
